fixed alignment issues

--- a/styles/about.scss
+++ b/styles/about.scss
@@ -24,7 +24,6 @@
     font-family: index.$header-font;
     font-weight: 600;
     font-size: 70px;
-    margin-top: 150px;
     text-align: center;
 }
 
@@ -32,16 +31,13 @@
     font-family: index.$header-font;
     font-weight: 600;
     font-size: 40px;
-    margin-bottom: 50px;
     text-align: center;
 }
 
 p {
-    margin-top: 20px;
     font-family: index.$text-font;
     font-weight: 400;
-    font-size: 30px;
-    margin-bottom: 20px;
+    font-size: 50px;
     margin-left: 100px;
     margin-right: 100px;
     text-align: center;
